feat(测试计划): 补充计划列表详情通过率, 执行进度统计逻辑